appId: com.spendwise.app
---
- scrollUntilVisible:
    element: "Attach Photos.*"
    direction: DOWN
    centerElement: true
- tapOn: "Attach Photos.*"
- assertVisible:
    text: "Attach Photos.*"
    checked: false
